syntax = "proto3";

option java_multiple_files = true;

option java_package = "org.wso2.grpc.test"; //change the package name

import "google/protobuf/empty.proto";

message Request
{
    string stringValue = 1;
    int32 intValue = 2;
    int64 longValue = 3;
    bool booleanValue = 4;
    float floatValue = 5;
    double doubleValue = 6;

}


message Response
{
    string stringValue = 1;
    int32 intValue = 2;
    int64 LongValue = 3;
    bool booleanValue = 4;
    float floatValue = 5;
    double doubleValue = 6;
}

message RequestWithMap
{
    string stringValue =1;
    int32 intValue = 2;
    map<string,string> map = 3;

}

message ResponseWithMap
{
    string stringValue =1;
    int32 intValue = 2;
    map<string,string> map = 3;

}


service MyService
{
    rpc send(Request) returns(google.protobuf.Empty);
    rpc process(Request) returns(Response);
    rpc testMap(RequestWithMap) returns(ResponseWithMap);
}